<resources>
    <string name="app_name">frame</string>

    <string name="space">\u0020</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="tools">Tools</string>
    <string name="favorite">Favorite</string>
    <string name="live">Live</string>
    <string name="share">Share</string>
    <string name="favorites">Favorites</string>
    <string name="open">Open</string>
    <string name="details">Details</string>

    <string name="new_items">New Items</string>

    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="add_all">Add All</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view">View</string>
    <string name="next">Next</string>
    <string name="category">Category</string>

    <string name="empty">""</string>
    <string name="loading">Loading…</string>
    <string name="try_again">Try Again</string>
    <string name="message_offline">Oops… You are offline.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="alert">Alert</string>
    <string name="alerts">Alerts</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="paused">Paused</string>
    <string name="resume">Resume</string>
    <string name="playing">Playing</string>

    <string name="connecting">Connecting</string>

    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>

    <string name="local">Local</string>
    <string name="trends">Trends</string>
    <string name="popular">Popular</string>


    <string name="back_pressed">Please click BACK again to exit</string>

    <string name="save">Save</string>
    <string name="save_success">Saved successfully.</string>

    <string name="auto_collection">Auto collection</string>
    <string name="detected_words">%d Words</string>

    <string name="all_rights_reserved">Copyright © 2019 Dreampany. All Rights Reserved.</string>
</resources>
