<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="${relativePackage}.${activityClass}">

    <data>

        <variable
            name="item"
            type="com.dreampany.tools.ui.model.ServerItem" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        auto:cardCornerRadius="@dimen/_2sdp"
        auto:cardPreventCornerOverlap="false"
        auto:elevation="@dimen/_2sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/empty"
                android:textColor="@color/material_black"
                android:textSize="@dimen/_16ssp"
                auto:fontFamily="@font/roboto_slab_bold"
                auto:layout_constraintStart_toStartOf="parent"
                auto:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_5sdp" android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/empty"
                android:textColor="@color/material_black"
                android:textSize="@dimen/_14ssp"
                auto:fontFamily="@font/roboto_slab_regular"
                auto:layout_constraintStart_toStartOf="parent"
                auto:layout_constraintTop_toBottomOf="@id/view_country_name"
                tools:text="@string/subtitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>