<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="${relativePackage}.${activityClass}">

    <data>

        <variable
            name="item"
            type="com.dreampany.tools.ui.model.ServerItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_grey200">

        <com.github.nikartm.button.FitButton
            android:id="@+id/button_action"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:enabled="false"
            android:gravity="center"
            auto:fb_backgroundColor="@color/material_red700"
            auto:fb_cornerRadius="@dimen/_2sdp"
            auto:fb_shape="circle"
            auto:fb_text="@string/start"
            auto:fb_textColor="@color/material_white"
            auto:fb_textSize="@dimen/_22ssp"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/title"
            android:textColor="@color/material_grey800"
            android:textSize="@dimen/_14ssp"
            auto:fontFamily="@font/roboto_slab_bold"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@id/button_action" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/view_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/subtitle"
            android:textColor="@color/material_grey500"
            android:textSize="@dimen/_12ssp"
            auto:fontFamily="@font/roboto_slab_regular"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@id/view_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>