<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="${relativePackage}.${activityClass}">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        auto:cardCornerRadius="3dp"
        auto:cardPreventCornerOverlap="false"
        auto:elevation="@dimen/_2sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_icon"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                auto:layout_constraintEnd_toEndOf="parent"
                auto:layout_constraintStart_toStartOf="parent"
                auto:layout_constraintTop_toTopOf="parent"
                auto:srcCompat="@drawable/ic_android_black_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/material_grey800"
                android:textSize="@dimen/_10ssp"
                auto:fontFamily="@font/roboto_slab_bold"
                auto:layout_constraintEnd_toEndOf="parent"
                auto:layout_constraintStart_toStartOf="parent"
                auto:layout_constraintTop_toBottomOf="@id/image_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/material_grey700"
                android:textSize="@dimen/_8ssp"
                android:textStyle="italic"
                auto:fontFamily="@font/roboto_slab_bold"
                auto:layout_constraintEnd_toEndOf="parent"
                auto:layout_constraintStart_toStartOf="parent"
                auto:layout_constraintTop_toBottomOf="@id/text_name" />

            <com.github.nikartm.button.FitButton
                android:id="@+id/button_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                auto:fb_backgroundColor="@color/material_grey200"
                auto:fb_cornerRadius="@dimen/_2sdp"
                auto:fb_text="@string/open"
                auto:fb_textColor="@color/material_grey800"
                auto:fb_textSize="@dimen/_10ssp"
                auto:layout_constraintStart_toStartOf="parent"
                auto:layout_constraintTop_toBottomOf="@id/text_size"
                tools:visibility="visible" />

            <com.github.nikartm.button.FitButton
                android:id="@+id/button_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                auto:fb_backgroundColor="@color/material_grey200"
                auto:fb_cornerRadius="@dimen/_2sdp"
                auto:fb_text="@string/details"
                auto:fb_textColor="@color/material_grey800"
                auto:fb_textSize="@dimen/_10ssp"
                auto:layout_constraintStart_toEndOf="@id/button_open"
                auto:layout_constraintTop_toBottomOf="@id/text_size"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>